doc: fixed weird FAQ spacing on toc / style to more closely match rest of site

--- a/docs/themes/cypress/source/css/_partial/faq.scss
+++ b/docs/themes/cypress/source/css/_partial/faq.scss
@@ -16,39 +16,53 @@
   }
 
   .article-inner {
-      margin-right: 0;
-      border-right: 0;
+    margin-right: 0;
+    border-right: 0;
+  }
+
+  .toc {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ddd;
   }
 
   .toc-link {
-    // white-space: nowrap;
-    // overflow: hidden;
     padding-left: 0;
-    background-color: #f5f5f5;
+    // background-color: #f5f5f5;
     padding: 5px 10px;
+    line-height: 1.5em;
+    font-size: 14.5px;
   }
 
   .toc-level-1 {
 
     a.toc-link {
-      border-bottom: 1px solid #ddd;
-      padding-left: 10px;
+      border-bottom: 0;
+      padding-left: 5px;
 
       &:before {
-        content: '>'
+        content: "\f105";
+        font-family: FontAwesome;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: inherit;
+        margin-right: 3px;
       }
 
       &:hover {
         cursor: pointer;
         color: #0369b3;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 0;
       }
     }
     &>a.toc-link {
-      color: $color-default;
+      color: #474a54;
       border-bottom: 1px solid #ddd;
       margin-top: 20px;
-      padding-left: 10px;
+      margin-bottom: 10px;
+      // padding-bottom: 10px;
+      padding-left: 0;
+      font-family: $font-title;
+      font-size: 1.1em;
 
       &:before {
         content: ''
@@ -56,7 +70,8 @@
 
       &:hover {
         cursor: default;
-        color: $color-default;
+        color: #474a54;
+        border-bottom: 1px solid #ddd;
       }
     }
   }
