--- a/docs/themes/cypress/source/css/_partial/page.scss
+++ b/docs/themes/cypress/source/css/_partial/page.scss
@@ -78,7 +78,7 @@
 
 
 
-    li {
+    li:not('.toc-item') {
       margin: 1em 0;
 
       p {
